# learn_3dzavr

./: .gitignore  CMakeLists.txt  README.md  lesson1.cpp  lesson2.cpp  lesson3.cpp  lesson4.cpp  lesson5.cpp  lesson6.cpp  lesson7.cpp  lesson8.cpp  test_scene.cpp
engine/: CMakeLists.txt  Camera.cpp  Camera.h  Consts.h  Engine.cpp  Engine.h  Matrix4x4.cpp  Mesh.cpp  Mesh.h  Object.cpp  Object.h  ObjectController.h  Plane.cpp  ResourceManager.cpp  Screen.cpp  Vec2D.cpp  Vec3D.cpp  Vec3D.h  Vec4D.cpp  Vec4D.h  World.cpp
engine/animation/: ADecompose.h  ARotate.h  AScale.h  AShowCreation.h  ATranslate.h  Animation.cpp  Animations.h  Interpolation.cpp  Timeline.h
engine/geometry/: Mesh.cpp  Mesh.h  Plane.cpp  Plane.h
engine/gui/: Button.cpp  Window.cpp  Window.h
engine/io/: Mouse.cpp  Mouse.h  Screen.cpp  Screen.h  SoundController.cpp
engine/linalg/: Matrix4x4.cpp  Matrix4x4.h  Vec2D.cpp  Vec2D.h  Vec3D.cpp  Vec3D.h  Vec4D.cpp
engine/math/: Matrix4x4.cpp  Matrix4x4.h  Vec2D.cpp  Vec2D.h  Vec3D.cpp  Vec4D.cpp
engine/network/: ClientUDP.h  ReliableMsg.cpp  ServerUDP.h  UDPSocket.cpp
engine/physics/: HitBox.cpp  RigidBody.cpp  RigidBody.h
engine/utils/: ObjectController.cpp  ObjectController.h  ResourceManager.cpp  ResourceManager.h  Time.cpp  Time.h
lesson10/: Client.cpp  Client.h  Server.cpp  Server.h  lesson10.cpp
